# fuh

./: .gitattributes  .gitignore  Fehlende_Columns.xlsx  README.md  akins_test_flask_server.py  akins_test_flask_server_angepasst_an_dateiversand.py  akins_test_flask_server_angepasst_an_dateiversand_mit_einem_postrequest.py  binary_ipca.pkl  ipca.pkl  model.pkl  multi_scaler.pkl  requirements.txt  scaler.pkl  sensor_token.txt
adapter/: README.md  adapt_capture_to_trainingdata.py  example_usage_of_adapter.py  tests_for_adapter.py
data/: README.md
del.direnv/: devenv-profile-39ea5e1fc23872276003156e87993bb18965928b.rc
discord_bot/: .env.example  README  README.md  discord_main.py  requirements.txt
dockerized-dash-elastic-server/: .env  DOCKERFILE  README.md  docker-compose.yaml  mapping.json  run.py
flask_dash_app/: DOCKERFILE  docker-compose.yaml  mapping.json  model_mapping.json  requirements.txt  run.py
instance/: users.db
live_flow_from_cicflowmeter/: README.md  banana.pcap  flow1.pkl  flow2.pkl  inspect-single_flow.py  my_sniffer.py  my_tests.py  (+2 more)
nids-sensor/tcpdump-sensor/ids-provider/: CMakeLists.txt  common-util.c  common-util.h  config.yml  dissection-processor.c  dissection-processor.h  kafka-processor.c  kafka-processor.h  processor_threads.c  processor_threads.h  ring-buffer.c  ring-buffer.h  yaml-processor.c  yaml-processor.h
nids-sensor/tcpdump-sensor/ids-provider/pcapdissector/: layer.c  layer.h  packet.c  packet.h
nids-sensor/tcpdump-sensor/ids-provider/pcapdissector/layers/: ethernet-layer.c  ethernet-layer.h  fddi-layer.c  fddi-layer.h  linux-cooked-layer.c  linux-cooked-layer.h  loop-null-layer.c  loop-null-layer.h  loopback-layer.c  loopback-layer.h  ppp-layer.c  ppp-layer.h  pppoe-layer.c  pppoe-layer.h  radiotap-layer.c  radiotap-layer.h  raw-ip-layer.c  raw-ip-layer.h  slip-layer.c  slip-layer.h  wifi-layer.c  wifi-layer.h
nids-sensor/tcpdump-sensor/ids-provider/pcapdissector/protocols/: arp-layer.c  arp-layer.h  dhcp-layer.c  dhcp-layer.h  dns-layer.c  dns-layer.h  icmp-layer.c  icmp-layer.h  icmpv6-layer.c  icmpv6-layer.h  igmp-layer.c  igmp-layer.h  ipv4-layer.c  ipv4-layer.h  ipv6-layer.c  ipv6-layer.h  llc-layer.c  llc-layer.h  mdns-layer.c  mdns-layer.h  ntp-layer.c  ntp-layer.h  sctp-layer.c  sctp-layer.h  sna-path-control-layer.c  sna-path-control-layer.h  snap-layer.c  snap-layer.h  snmp-layer.c  snmp-layer.h  ssdp-layer.c  ssdp-layer.h  stp-layer.c  stp-layer.h  tcp-layer.c  tcp-layer.h  udp-layer.c  udp-layer.h  udp-port-custom-layer.c  udp-port-custom-layer.h  (+2 more)
(+311 files in other folders)
